
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int UDD_STATE_IDLE ;
 int USB_DEVICE_CALLBACK_LPMSUSP ;
 int USB_DEVICE_CALLBACK_RESET ;
 int USB_DEVICE_CALLBACK_SOF ;
 int USB_DEVICE_CALLBACK_SUSPEND ;
 int USB_DEVICE_CALLBACK_WAKEUP ;
 int _usb_device_lpm_suspend ;
 int _usb_on_bus_reset ;
 int _usb_on_sof_notify ;
 int _usb_on_suspend ;
 int _usb_on_wakeup ;
 int udd_sleep_mode (int ) ;
 int usb_device ;
 int usb_device_attach (int *) ;
 int usb_device_enable_callback (int *,int ) ;
 int usb_device_register_callback (int *,int ,int ) ;

void udd_attach(void) {
    udd_sleep_mode(UDD_STATE_IDLE);
    usb_device_attach(&usb_device);

    usb_device_register_callback(&usb_device, USB_DEVICE_CALLBACK_SUSPEND, _usb_on_suspend);
    usb_device_register_callback(&usb_device, USB_DEVICE_CALLBACK_SOF, _usb_on_sof_notify);
    usb_device_register_callback(&usb_device, USB_DEVICE_CALLBACK_RESET, _usb_on_bus_reset);
    usb_device_register_callback(&usb_device, USB_DEVICE_CALLBACK_WAKEUP, _usb_on_wakeup);

    usb_device_enable_callback(&usb_device, USB_DEVICE_CALLBACK_SUSPEND);
    usb_device_enable_callback(&usb_device, USB_DEVICE_CALLBACK_SOF);
    usb_device_enable_callback(&usb_device, USB_DEVICE_CALLBACK_RESET);
    usb_device_enable_callback(&usb_device, USB_DEVICE_CALLBACK_WAKEUP);




}
